<resources xmlns:aid="http://schemas.android.com/tools">
    Allgemeines:
    <string name="app_name">WbgApp</string>
    <string name="app_title">Weinberg App</string>
    <string name="action_login">Anmelden</string>
    <string name="settings_general_title">Login</string>

    Nav Titles:
    <string name="homescreen">Startseite</string>
    <string name="newsfeed_title">Neuigkeiten</string>
    <string name="events_title">Termine</string>
    <string name="substitute_plan_title">Vertretungsplan</string>
    <string name="subtitute_plan_section_title">Vertretungsplan für...</string>
    <string name="substitute_plan_title_today">Heute</string>
    <string name="substitute_plan_title_next">den nächsten Unterrichtstag</string>
    <!--<string name="schedule_title">Stundenplan</string>-->
    <string name="mail_section_title">E-Mails</string>
    <string name="mail_inbox">Posteingang</string>
    <string name="forum_section_title">Forum</string>
    <string name="forum_notification_title">Benachrichtungen</string>
    <string name="forum_messages_title">Messages</string>
    <string name="settings_section_title">Einstellungen</string>
    <string name="settings_account_title">Accounteinstellungen</string>
    <string name="settings_notifications_title">Benachrichtigungseinstellungen</string>
    <string name="settings_datausage_title">Datennutzung</string>

    Benachrichtungs Texte:
    <string name="new_events_title">Neuer Termin vorhanden</string> <!-- News Artikel erschienen -->
    <string name="new_events_description">Es ist mindestens ein neuer Termin vorhanden.</string>
    <string name="new_news_title">Neuer News Artikel</string>  <!-- Event findet statt -->
    <string name="new_news_description">Es ist ein neuer News Artikel erschienen!</string>
    <string name="new_supstitute_title">Vertretungsplan</string> <!-- Neuer Vertretungsplan -->
    <string name="new_supstitute_description">Der neue Vertretungsplan wurde hochgeladen.</string>
    <string name="new_message_title">Neue Nachricht</string> <!-- Neue Nachricht der Developer auf dem HomeScreen -->
    <string name="new_message_description">Du hast eine neue Nachricht von den Entwicklern erhalten!</string>
    <string name="new_mail_title">Neue E-Mail</string> <!-- Neue EMail vorhanden -->
    <string name="new_mail_description">Du hast eine neue EMail bekommen!</string>

    Elemten in/auf Seiten:
        HomeScreen:
        <string name="hs_newversion_text">Es ist eine neue Version der Weinberg App verfügbar! \nJetzt herunterladen!</string>
        <string name="hs_newversion_text2">Deine Version: 0_XXX123456789Xib \nVerfügbare Version: 0_YYY123456789Yib</string>
        <string name="hs_messages_title">Nachrichten der Entwickler</string>
        News:
        <string name="news_error">News konnten nicht geladen werden.</string>
        Events:
        <string name="events_location">Ort:</string>
        <string name="events_from">Von:</string>
        <string name="events_to">Bis:</string>
        <string name="events_save">In Kalender speichern</string>
        Einstellungen:
            Account:
            <string name="settings_registration_desc">Melde dich hier mit deiner WbGym E-Mail an, damit die App gesicherte Inhalte freischalten kann. (z.B. den Vertretungsplan)\nDie Anmeldung erfolgt einmalig und wird dann gespeichert.</string>
            <string name="TextLoginButton">Login</string>
            <string name="registration_title">Login</string>
            Datennutzung:
            <string name="settings_datausage_information">Hier kannst du die Datennutzung deiner App regulieren. Sollen Fotos sofort geladen werden, oder doch lieber erst beim Anwählen?</string>
            <string name="settings_datausage_images">Bilder sollen automatisch vorab geladen und angezeigt werden. (erhöht den Datenverbrauch)</string>
            <string name="settings_datausage_videos">Videos sollen automatisch vorab geladen und angezeigt werden. (erhöht Datenverbrauch massiv)</string>
            Benachrichtigung:
            <string name="settings_notification_information">Stelle hier ein, wie oft und zu welchen Zeitpunkten die App dich benachrichtigen soll.</string>
            <string name="settings_notification_informationen_comment">Achtung: Viele Benachrichtigungen könnten die Laufzeit des Gerätes und die Akkulaufzeit negativ beeinflussen. </string>
            <string name="settings_notification_general">Benachrichtigungen zulassen</string>
            <string name="settings_notification_text">Eine Benachrichtigung soll erfolgen...</string>
            <string name="settings_notification_events">...wenn neue Events vorhanden sind.</string>
            <string name="settings_notification_news">...sobald ein neuer Newsartikel erscheint.</string>
            <string name="settings_notification_messages">...wenn es eine neue Nachricht der Entwickler gibt.</string>
            <string name="settings_notification_mail">...ich eine neue E-Mail bekommen habe.</string>
            <string name="settings_notification_supstitute">...der Vertretungsplan aktualisiert wurde.</string>
        Vertretungsplan:
        <string name="subsitute_plan_condition"></string>
        <string name="subsitute_plan_description">Wische auf dem Bildschirm nach links oder rechts, um zu den Vertretungen deiner Klassenstufe zu gelangen. </string>
        <string name="sp_class">Klasse:</string>
        <string name="sp_lesson">Stunde:</string>
        <string name="sp_type">Art:</string>
        <string name="sp_teacher">Lehrer:</string>
        <string name="sp_subject">Fach:</string>
        <string name="sp_substitute_teacher">Vertretungslehrer:</string>
        <string name="sp_substitute_subject">Vertretungsfach:</string>
        <string name="sp_substitute_room">Vertretungsraum:</string>
        <string name="sp_remark">Bemerkungen:</string>
        <string name="sub_list_empty">Keine Vertretungen gefunden</string>
        Forum:
        <string name="forum_title_main">Forum - Startseite</string>

        EMails:
        <string name="mail_description">Alle deine E-Mails werden hier aufgelistet, sobald du dich mit deinem WBGym Account in der App angemeldet hast. </string>
        <string name="mail_description_warning">E-Mails können hier nur gelesen und nicht geschrieben werden!</string>
        Sonstiges:

</resources>
