<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/nav_home"
            android:title="@string/homescreen"
            android:icon="@drawable/ic_nav_home" />

        <item
            android:id="@+id/nav_news"
            android:title="@string/newsfeed_title"
            android:icon="@drawable/ic_nav_news"/>

        <item
            android:id="@+id/nav_events"
            android:title="@string/events_title"
            android:icon="@drawable/ic_nav_events"/>

        <item
            android:id="@+id/nav_substitute_plan"
            android:title="@string/substitute_plan_title"
            android:icon="@drawable/ic_nav_sp_2"/>

        <item
            android:id="@+id/nav_forum"
            android:title="@string/forum_title_main"
            android:icon="@drawable/ic_nav_forum"/>


        <!--
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/schedule_title" />

        <item android:title="@string/mail_section_title">
            <menu>
                <item
                    android:id="@+id/mail_inbox"
                    android:title="@string/mail_inbox" />
            </menu>
        </item>
        -->

        <item android:title="@string/settings_section_title">
            <menu>
                <item
                    android:id="@+id/nav_settings_account"
                    android:title="@string/settings_account_title"
                    android:icon="@drawable/ic_nav_settings_account"/>
                <item
                    android:id="@+id/nav_settings_notifications"
                    android:title="@string/settings_notifications_title"
                    android:icon="@drawable/ic_nav_settings_notifications_2" />
               <!-- <item
                    android:id="@+id/nav_settings_datausage"
                    android:title="@string/settings_datausage_title" /> -->
            </menu>
        </item>
</menu>
