<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="55dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/settings_notification_information"
            android:id="@+id/textView9"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/settings_notification_informationen_comment"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_notification_general"
            android:id="@+id/n_general"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:checked="true"
            android:layout_below="@+id/textView10"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/textView10"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/settings_notification_text"
            android:id="@+id/textView11"
            android:layout_below="@+id/n_general"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_notification_news"
            android:id="@+id/n_news"
            android:layout_below="@+id/textView11"
            android:layout_marginTop="10dp"
            android:layout_alignEnd="@+id/n_general"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:switchPadding="5dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_notification_events"
            android:id="@+id/n_events"
            android:layout_below="@+id/n_news"
            android:layout_alignStart="@+id/n_news"
            android:layout_alignEnd="@+id/n_news"
            android:layout_marginTop="15dp"
            android:switchPadding="5dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_notification_messages"
            android:id="@+id/n_messages"
            android:layout_below="@+id/n_events"
            android:layout_alignStart="@+id/n_events"
            android:layout_alignEnd="@+id/n_events"
            android:layout_marginTop="15dp"
            android:switchPadding="5dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_notification_mail"
            android:id="@+id/n_mail"
            android:layout_below="@+id/n_messages"
            android:layout_alignStart="@+id/n_messages"
            android:layout_marginTop="15dp"
            android:layout_alignEnd="@+id/n_messages"
            android:switchPadding="5dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_notification_supstitute"
            android:id="@+id/n_supstitue"
            android:layout_below="@+id/n_mail"
            android:layout_alignStart="@+id/n_mail"
            android:layout_alignEnd="@+id/n_mail"
            android:layout_marginTop="15dp"
            android:switchPadding="5dp" />

        <!-- TODO: Wird das hier noch gebraucht? -->

        <!--<Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_notification_place_lockscreen"
            android:id="@+id/notification_place_lockscreen_on_off"
            android:layout_below="@+id/textView12"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="40dp" /> -->

    </RelativeLayout>
</ScrollView>