<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_datausage_images"
            android:id="@+id/data_images_on_off"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/textView6" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_datausage_videos"
            android:id="@+id/data_videos_on_off"
            android:layout_below="@+id/data_images_on_off"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="0dp"
            android:layout_alignStart="@+id/data_images_on_off"
            android:layout_alignEnd="@+id/data_images_on_off" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/settings_datausage_information"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Invalidate Caches"
            android:id="@+id/button_invalidate"
            android:layout_below="@+id/data_videos_on_off"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
    </RelativeLayout>
</ScrollView>